# Coolgame

./: CMakeLists.txt  JenkinsFile  cmake_build.sh
game/src/: main.cpp
game/src/test/: test_GameObject.cpp
